# afasttoywebapi

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/2024-12-27-205725_create_facilities/: down.sql  up.sql
src/: core.rs  main.rs  models.rs  schema.rs  storage.rs
