[package]
name = "afasttoywebapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["default", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.42", features = ["full", "macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2", features = ["postgres", "chrono"] }
deadpool-diesel = {  version = "0.6", features = ["postgres", "rt_tokio_1", "serde", "tracing"] }
tracing-subscriber = "0.3"
